Update xopera-opera to 0.6.2, add info.
